--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc -p tsconfig.json",
+    "watch": "tsc -w -p tsconfig.json",
+    "lint": "tslint -t stylish --project \"tsconfig.json\"",
     "test": "mocha"
   },
   "repository": {
@@ -15,5 +18,22 @@
   "bugs": {
     "url": "https://github.com/ShepherdJerred-homework/my-cloud/issues"
   },
-  "homepage": "https://github.com/ShepherdJerred-homework/my-cloud#readme"
+  "homepage": "https://github.com/ShepherdJerred-homework/my-cloud#readme",
+  "devDependencies": {
+    "@types/chai": "^4.1.2",
+    "@types/chai-http": "^3.0.4",
+    "@types/express": "^4.11.1",
+    "@types/mocha": "^2.2.48",
+    "@types/node": "^9.4.6",
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "mocha": "^5.0.1",
+    "tslib": "^1.9.0",
+    "tslint": "^5.9.1",
+    "tslint-config-semistandard": "^7.0.0",
+    "typescript": "^2.7.2"
+  },
+  "dependencies": {
+    "express": "^4.16.2"
+  }
 }
