--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@types/chai": "^4.1.2",
     "@types/chai-http": "^3.0.4",
     "@types/express": "^4.11.1",
+    "@types/express-handlebars": "0.0.30",
+    "@types/handlebars": "^4.0.36",
     "@types/mocha": "^2.2.48",
+    "@types/morgan": "^1.7.35",
     "@types/node": "^9.4.6",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
@@ -34,6 +37,9 @@
     "typescript": "^2.7.2"
   },
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.11",
+    "morgan": "^1.9.0"
   }
 }
