--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "tsc -w -p tsconfig.json",
     "lint": "tslint -t stylish --project \"tsconfig.json\"",
     "test": "mocha",
-    "start": "node lib/app/server"
+    "start": "node lib/app/server",
+    "dev": "nodemon lib/app/server"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,14 @@
   },
   "homepage": "https://github.com/ShepherdJerred-homework/my-cloud#readme",
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "mocha": "^5.0.1",
+    "tslint": "^5.9.1",
+    "tslint-config-semistandard": "^7.0.0",
+    "nodemon": "^1.15.1"
+  },
+  "dependencies": {
     "@types/chai": "^4.1.2",
     "@types/chai-http": "^3.0.4",
     "@types/express": "^4.11.1",
@@ -29,18 +38,13 @@
     "@types/mocha": "^2.2.48",
     "@types/morgan": "^1.7.35",
     "@types/node": "^9.4.6",
-    "chai": "^4.1.2",
-    "chai-http": "^3.0.0",
-    "mocha": "^5.0.1",
-    "tslib": "^1.9.0",
-    "tslint": "^5.9.1",
-    "tslint-config-semistandard": "^7.0.0",
-    "typescript": "^2.7.2"
-  },
-  "dependencies": {
+    "bulma": "^0.6.2",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
+    "font-awesome": "^4.7.0",
     "handlebars": "^4.0.11",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "tslib": "^1.9.0",
+    "typescript": "^2.7.2"
   }
 }
