--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/handlebars": "^4.0.36",
     "@types/mocha": "^2.2.48",
     "@types/morgan": "^1.7.35",
+    "@types/multer": "^1.3.6",
     "@types/node": "^9.4.6",
     "bulma": "^0.6.2",
     "express": "^4.16.2",
@@ -44,6 +45,7 @@
     "font-awesome": "^4.7.0",
     "handlebars": "^4.0.11",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "tslib": "^1.9.0",
     "typescript": "^2.7.2"
   }
